fixed alignment issues

--- a/style.css
+++ b/style.css
@@ -86,7 +86,6 @@ a{
 }
 .exampleImage{
 	border:solid #23282e 2px;
-	margin-top:2%;
 	height:100%;
 	border-radius: 5px;
 }
@@ -96,7 +95,6 @@ a{
 .info {
 	border: solid #23282e 2px;
 	height:98%;
-	margin-top:2%;
 	background-color:#bbbbbb;
 	border-radius:5px;
 	font-family:sans-serif;
